--- a/littlelemon/templates/index.html
+++ b/littlelemon/templates/index.html
@@ -6,6 +6,6 @@
    </head>
    <body>
       <h1 style="text-align:center;">Welcome ToLittleLemon Restaurant</h1>
-      <img src="{% static 'restaurant/littlelemon.png' %}">
+      <img src="{% static 'littlelemon.png' %}">
    </body>
 </html>
